--- a/css/blog.css
+++ b/css/blog.css
@@ -60,7 +60,6 @@ a:hover{
 #nav li{
   display: inline;
   margin: 25px;
-  font-family: bahnschrift;
   font-size: 25px;
   font-style: normal;
   text-shadow: 1.5px 1.5px black;
